fix scrollbar and add maintenance

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -366,6 +366,7 @@
   transform: translateY(10px);
   transition: opacity 0.5s;
   &__item {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -373,6 +374,23 @@
     margin-bottom: 8px;
     &:last-child {
       margin-right: 0px;
+    }
+  }
+  .item-mask {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(
+      circle at center,
+      rgba(0, 0, 0, 0.6),
+      transparent
+    );
+    &__content {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      width: 100%;
     }
   }
   .item-brand {
